added transparency to kitty

--- a/kitty/.config/kitty/themes/catppuccin-mocha.conf
+++ b/kitty/.config/kitty/themes/catppuccin-mocha.conf
@@ -6,6 +6,10 @@
 ## upstream: https://github.com/catppuccin/kitty/blob/main/themes/mocha.conf
 ## blurb:    Soothing pastel theme for the high-spirited!
 
+# Transperancy
+background_opacity 0.85
+background_blur 32
+
 # The basic colors
 foreground              #cdd6f4
 background              #1e1e2e
