--- a/kitty/.config/kitty/themes/catppuccin-mocha.conf
+++ b/kitty/.config/kitty/themes/catppuccin-mocha.conf
@@ -6,7 +6,7 @@
 ## upstream: https://github.com/catppuccin/kitty/blob/main/themes/mocha.conf
 ## blurb:    Soothing pastel theme for the high-spirited!
 
-# Transperancy
+# Transparency
 background_opacity 0.85
 background_blur 32
 
