copy pasty did not work good with kitty

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -8,3 +8,6 @@ window_padding_width 5
 
 # Line height
 adjust_line_height 8
+
+# do not ask permission to copy from and to the clipboard
+clipboard_control write-clipboard write-primary read-clipboard read-primary
