for opencode to work in tmux nvim session

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -11,3 +11,7 @@ adjust_line_height 8
 
 # do not ask permission to copy from and to the clipboard
 clipboard_control write-clipboard write-primary read-clipboard read-primary
+
+# for opencode.nvim to work properly
+allow_remote_control yes
+listen_on unix:@mykitty
