fixed the shift-enter issue in tmux and opencode, wanted newline, but got enter in opencode in a tmux session

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -15,3 +15,5 @@ clipboard_control write-clipboard write-primary read-clipboard read-primary
 # for opencode.nvim to work properly
 allow_remote_control yes
 listen_on unix:@mykitty
+
+map shift+enter send_text all \n
