--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,6 +1,10 @@
 set -g mouse on
 set -g default-terminal "tmux-256color"
-set -ag terminal-overrides ",xterm-256color:RGB"
+# set -ag terminal-overrides ",xterm-256color:RGB"
+set -g xterm-keys on
+set -g assume-paste-time 0
+set -as terminal-overrides ',xterm-kitty:XT'
+set -g xterm-keys on
 # Start windows and panes at 1, not 0
 set -g base-index 1
 setw -g pane-base-index 1
